# chatgpt-plugins

./: .gitignore  README.md  pyproject.toml
data/: alpaca.py
server/: ai-plugin.json  main.py  openapi.yaml
